--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -4,24 +4,40 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+
 }
 .blog-con{
     width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    background-color: #265AA5;
 }
 .new-update{
     font-family:sans-serif;
-    width: 90%;
+    width: 100%;
+    height: 50rem;
     display: flex;
+    padding-top: 5rem;
+    flex-direction: column;
+   
+   align-items: center;
+   gap: 2rem;
+}
+.new-update h3{
+    color: white;
 }
 .headline-con h3{
-    color: gray;
+    color: white;
     
     
+}
+.blog-item{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 }
 .update-image{
     display: flex;
@@ -30,18 +46,37 @@
 }
 .update-image img{
     width: 40vw;
+    border-radius: 10px;
+}
+.headline-up{
+    width:100%;
+    height: 30rem;
+    gap: 1rem;
+    background-color:#265AA5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
 }
 .headline{
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 .headline-con{
     width: 90%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
+}
+.headline-con h1{
+    font-size: 50px;
+    color: orange;
+}
+.headline-con p{
+    color: white;
 }
 .articles{
     width: 90%;
@@ -142,20 +177,31 @@ p:hover .p-dot{
 
 @media (max-width:768px) {
     .new-update{
+        padding-top: 0rem;
         flex-direction: column;
+        height: 40rem;
     }
     .update-image img{
-        width: 90vw;
+        width: 80vw;
     }
     .blog{
-        padding-top: 5rem;
+        padding-top: 3rem;
+    }
+    .headline-up{
+        height: 25rem;
+    }
+    .headline-con h1{
+        font-size: 25px;
+    }
+    .headline-con p{
+        font-size: 14px;
     }
     .article-box{
         width: 250px;
     height: 350px;
     }
     .article-box img{
-        width: 250px;
+        width: 200px;
         height: 200px;
         border-radius: 5px;
     }
@@ -167,8 +213,6 @@ p:hover .p-dot{
         display: flex;
         flex-direction: column;
     }
-    .blog h2{
-        display: none;
-    }
+    
    
 }
