--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -30,7 +30,8 @@
 
 .web-details p{
     color: rgb(87, 87, 87);
-  
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
 }
 .web-btn{
     display: flex;
