--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -4,6 +4,21 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
+}
+.img-back{
+    width: 100%;
+    height: 40rem;
+    background-color: #265aa2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+}
+
+.img-back img{
+    width: 40%;
+    border-radius: 10px;
 }
 .portfolio-heading{
     width: 100%;
@@ -22,16 +37,17 @@
     flex-direction: column;
     gap: 20px;
 }
+.portfolio-heading h3{
+    color: white;
+}
 .portfolio-heading h1{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    font-size: 60px;
+    font-size: 50px;
     font-style: normal;
     color: orange;
 }
 .portfolio-heading p{
-    font-family: 'inter',sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     color: white;
 }
 .portfolio-heading img{
@@ -40,21 +56,22 @@
 .portfolio-con{
     width: 90%;
     display: flex;
+    flex-wrap: wrap;
+
     justify-content: center;
     align-items: center;
     margin-top: 5rem;
     gap: 50px;
-    flex-direction: column;
     padding-bottom: 5rem;
+    padding-top: 8rem;
 }
 .port-services{
-    width: 90%;
+    width: 40%;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 0 0 10px gainsboro;
-    padding: 10px;
-    border-radius: 10px;
 }
 .port-services1{
     width: 90%;
@@ -67,13 +84,52 @@
     flex-direction: row;
     flex-direction: row-reverse;
 }
+.port-img{
+    width: 100%;
+    height: 30vw;
+    overflow:hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.port-img:hover{
+    background-color: white;
+}
+.port-img .ul{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    transition: .3s;
+    text-align: center;
+}
+.ul p{
+    font-size: 25px;
+}
+.port-img:hover .ul{
+    display: block;
+}
+.port-img img{
+    width: 100%;
+    transition: .3s;
+    
+}
+.port-img:hover img{
+    width: 120%;
+    opacity: 20%;
+}
+.port-details{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .port-details p{
     font-weight: 500;
     font-size: 25px;
+    
 }
-.port-img img{
-    width: 30vw;
-}
+
 .fort-footer{
     width: 100%;
     background-color: #265aa2;
@@ -113,4 +169,38 @@
     border-radius: 100px;
     border: solid 1px white;
     background:none;
+}
+
+
+
+@media (max-width:768px) {
+    .portfolio-heading h1{
+        font-size: 30px;
+    }
+    .portfolio-heading{
+        padding-top: 5rem;
+    }
+    .port-services{
+        width: 80vw;
+    }
+    .port-img{
+        width: 100%;
+        height: 0%;
+    }
+    .img-back{
+        height: 32rem;
+    }
+    .img-back img{
+        width: 80%;
+    }
+    .port-img .ul p{
+        font-size: 18px;
+    }
+    .fort-footer-con button{
+       width: 180px;
+       padding: 10px;
+    }
+    .port-text{
+        width: 90%;
+    }
 }
