--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   }
   
   p{
-    font-family: "Poppins", sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300;
     font-size: 18px;
     font-style: normal;
