--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -70,9 +70,11 @@
     
 }
 .about-details p{
-    font-size: 20px;
-    color: white;
-    font-style: italic;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 500;
+    color: orange;
+        margin-bottom: 5rem;
    
 }
 .team-image{
@@ -117,17 +119,21 @@
     .about-me{
         padding-top: 4rem;
         padding-bottom: 1rem;
-        height: 18rem;
+        height: 25rem;
     }
     .about-details{
         width: 80%;
-    
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
     }
-    .about-details h1, h3{
-        font-size: 18px;
+    .about-details h1{
+        font-size: 25px;
     }   
     .about-details p{
-        font-size: 14px;
+        font-size:18px;
+        color: orange;
+        margin-bottom: 5rem;
     }
     .about-image{
         gap: 1rem;
