--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 12rem;
     gap: 60px;
 }
 
@@ -47,8 +48,9 @@
     color: orange;
 }
 .portfolio-heading p{
-    font-size: 16px;
+    font-size: 18px;
     color: white;
+    font-style: italic;
 }
 .portfolio-heading img{
     width: 50%;
@@ -91,6 +93,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+ 
 }
 .port-img:hover{
     background-color: white;
@@ -170,7 +173,28 @@
     border: solid 1px white;
     background:none;
 }
+.port-slider{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 1rem;
+    flex-direction: column;
+    gap: 2rem;
+    color: black;
+}
 
+.portfolio-slider {
+    width: 90%;
+    display: block;
+    
+    
+}
+.port-slider img{
+    width: 25rem;
+    height: 20rem;
+}
 
 
 @media (max-width:768px) {
@@ -202,5 +226,9 @@
     }
     .port-text{
         width: 90%;
+    }
+    .port-slider img{
+        width: 20rem;
+    height: 18rem;
     }
 }
