--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #265AA5;
+    background-image: linear-gradient(to right, #00ccff , #265AA5);
 }
 .contact-con{
     width: 90%;
@@ -22,6 +22,9 @@
     color: white;
     font-size: 20px;
     text-align: center;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
 }
 .contact-details{
     width: 40%;
